--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,12 +4,17 @@ on:
   push:
   pull_request:
   workflow_dispatch:
+    inputs:
+      version:
+        description: 'Release version (e.g. v1.2.3)'
+        required: true
+        type: string
   
 permissions:
   checks: write
   pull-requests: write
   id-token: write
-  contents: read
+  contents: write
   pages: write
 
 jobs:
@@ -38,3 +43,28 @@ jobs:
         check_name: 'JUnit Tests'
         require_tests: true       # fail if no tests found
         annotate_only: false
+  tag:
+    if: ${{ github.event.inputs.version != '' }}
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Create and push tag
+      run: |
+        VERSION="${{ github.event.inputs.version }}"
+        
+        # Optional: basic validation
+        if [[ ! "$VERSION" =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+          echo "Invalid version format: $VERSION (expected vX.Y.Z)"
+          exit 1
+        fi
+
+        echo "Tagging ${{ github.sha }} as $VERSION"
+
+        # Optional: fail if tag already exists
+        if git rev-parse "$VERSION" >/dev/null 2>&1; then
+          echo "Tag $VERSION already exists"
+          exit 1
+        fi
+
+        git tag "$VERSION" "${GITHUB_SHA}"
+        git push origin "$VERSION"
